# gestao-info-ti

./: .env  README.MD  db.sqlite3  pyproject.toml
conf/: settings.py
gestao_ti/: admin.py  apps.py  models.py  signals.py
gestao_ti/migrations/: 0001_initial.py  0002_rename_usuario_historicoemail_colaborador_and_more.py  0003_rename_email_colaborador_email_pessoal_and_more.py  0004_colaborador_ativo_filial_ativo_sistema_ativo.py  0005_filial_cnpj_sistema_filial_and_more.py
static/js/: password_toggle.js
staticfiles/admin/css/: custom.css
staticfiles/js/: admin_password.js
